--- a/css/styles.css
+++ b/css/styles.css
@@ -14,3 +14,18 @@
 div#results {
   display: none;
 }
+
+.emoji  {
+  padding-right: 20px;
+}
+
+.footer {
+  text-align: center;
+  padding-top: 20px;
+
+}
+body{
+  font-family: 'Indie Flower', cursive;
+  font-size: 25px;
+
+}
